* BUG#9261 Fix behavior if not in a process
* BUG#8919 Fix translations of endorsement parts in the endorsement process

Version 2.0 - 2018-04-13
Version 1.14 - 2017-11-09
Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06

Version 1.6 - 2015-12-23
* FEA#0000 Allow to launch endorsement process from contract

Version 1.4 - 2015-05-29

Version 1.3 - 2015-01-22
* FEA#0000 Module creation